# eval-workbench

./: .gitignore  AGENT.md  PROMPT_build.md  PROMPT_plan.md  README.md  SPEC.md  config.yaml  generate_test_suite.py  loop.sh  manifest  prompt.md  pyproject.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
docs/: adding-a-test-case.md  architecture.md  canaries-and-errors.md  canonical-model.md  customization.md  european-variants.md  formatter-family-matrix.md  formatter-family-matrix.yaml  glossary.md  scoring.md  troubleshooting.md  tui-scenario-configuration.md
generator/: augmentation.py  augmentation_validators.py  canaries.py  config.py  errors.py  judgment_traps.py  manifest.py  noise.py  scenario_context.py  schema_metadata.py
presets/: easy-mode.yaml  flat-seasonality.yaml  high-growth.yaml  higher-noise.yaml  small-company.yaml
scoring/: auto_grader.py  rubrics.yaml  scoring_template.py
scripts/: create_engagement_letter_template.py  create_workpaper_memo_template.py  spike_datadesigner.py
specs/: european-professional-services-variants.md  european-standards-reference.md  universal-professional-services-scenario-packs.md
templates/: engagement_letter_template.docx  workpaper_memo_template.docx
tests/: baseline_checksums.json  test_ap_ledger.py  test_ar_ap.py  test_augmentation.py  test_augmentation_validators.py  test_bank.py  test_baseline_regression.py  test_canaries.py  test_canary_noise_preservation.py  test_canary_preservation.py  test_cli_overrides.py  test_coa.py  test_company_profile_screen.py  test_config.py  (+75 more)
(+86 files in other folders)
