[project]
name = "synth-data"
version = "0.1.0"
description = "Deterministic test suite generator for Big 4 professional services AI agent evaluation"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5,<4",
    "python-docx>=1.1.2,<2",
    "reportlab>=4.2.5,<5",
    "fpdf2>=2.8.2,<3",
    "pypdf>=5.1.0,<6",
    "pandas>=2.2.3,<3",
    "numpy>=2.1.3,<3",
    "faker>=33.1.0,<34",
    "pyyaml>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4,<9",
    "ruff>=0.8.4,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generator"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
